# vtun

./: .editorconfig  .gitignore  .travis.yml  3des.c  3des.h  CMakeLists.txt  LICENSE  Makefile  README.md  base64.c  base64.h  client.c  client.h  codec.c  codec.h  conf.c  conf.h  ioctl.c  ioctl.h  rc  server.c  server.h  sig.c  sig.h  vtun.c  vtun.conf  vtun.conf.sample1  vtun.conf.sample2  vtun.h  xfer.c  xfer.h
assets/FreeBSD/etc/: devfs.rules  jail.conf
assets/scripts/FreeBSD/: setup.sh
inc/: CMakeLists.txt  conf.h  ioctl.h  vtun.h
src/: CMakeLists.txt  base64.c  client.c  codec.c  conf.c  ioctl.c  server.c  sig.c  vtun.c  xfer.c
