add_compile_definitions(_WITH_DPRINTF)
add_compile_options(-O3)
add_compile_options(-Wall)
add_compile_options(-Werror)
add_compile_options(-march=native)
add_link_options(-Wl,-s)
add_subdirectory(inc)
add_subdirectory(src)
cmake_minimum_required(VERSION 3.16.3)
project(vtun)
target_link_libraries(vtun crypto)
